tests/cases/modules/ok/package-cache-layout-types-main.ari
mod cache_layout_types;

fn main() -> i64 {
  return cache_layout_types::vector_capacity_shape() +
    cache_layout_types::fixed_vector_payload_match();
}
