tests/cases/modules/errors/private-module-constant.ari
mod Hidden {
  const SECRET: i64 = 7;
}

fn main() -> i64 {
  Hidden::SECRET
}
